fix(vue-actionbar-table): align header metrics and action group layout

--- a/packages/@vue-spectrum/actionbar/src/actionbar.css
+++ b/packages/@vue-spectrum/actionbar/src/actionbar.css
@@ -76,7 +76,32 @@
 
   .react-spectrum-ActionBar-actionGroup {
     grid-area: actiongroup;
-    min-width: 0;
+    min-width: 76px;
+    width: 76px;
+
+    .vs-spectrum-action-group__wrapper {
+      width: 100%;
+    }
+
+    .flex-gap {
+      width: auto;
+      height: auto;
+      margin: 0;
+      --row-gap: 0px;
+      --column-gap: 0px;
+      column-gap: var(--spectrum-global-dimension-size-100);
+      row-gap: 0;
+    }
+
+    .spectrum-ActionGroup-item,
+    .spectrum-ActionGroup-menu {
+      inline-size: 34px;
+      min-inline-size: 34px;
+    }
+
+    .flex-container .flex-gap > * {
+      margin: 0;
+    }
   }
 }
 
